<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mtech.rsrtcsc.ui.activity.route.PassRouteSelectionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1D82D3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_gravity="left"
            android:textColor="@color/white"
            android:text="RFID Smart Card System"/>

        <ImageView
            android:id="@+id/ivHumberger"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_home" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass_route_selection"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:textColor="#ff0000"
        android:background="@drawable/rounded_corner"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/dist_wise_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_wise_pass"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/fixed_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixed_pass"
            />

<!--        <Button-->
<!--            android:id="@+id/back"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Back"-->
<!--            />-->

    </LinearLayout>
</LinearLayout>
</layout>